syntax = "proto3";

package api.record.v1;

option go_package = "sign-in/api/record/v1;v1";
option java_multiple_files = true;
option java_package = "api.record.v1";

service RecordService {
  rpc GetSignInInfo(GetSignInInfoRequest) returns (SignInInfoReply);
  rpc SignIn(SignInRequest) returns (SignInInfoReply);
  rpc GetUserSignInRecord(GetUserSignInRecordRequest) returns (GetUserSignInRecordReply);
}

message GetSignInInfoRequest {
  int64 user = 1;
}

message SignInInfoReply {
  repeated double reward_list = 1;
  repeated bool sign_index_list = 2;
  bool is_sign_today = 3;
}

message SignInRequest {
  int64 user = 1;
}

message GetUserSignInRecordRequest {
  int64 user = 1;
  repeated string day = 2;
}

message UserRecord {
  string day = 1;
  int32  index = 2;
  double reward = 3;
}

message GetUserSignInRecordReply{
  repeated UserRecord user_record = 1;
}