syntax = "proto3";
package kratos.api;

option go_package = "reward/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Kafka {
    repeated string addr = 1;
  }
  message WalletClient {
    string addr = 1;
  }
  Kafka kafka = 1;
  WalletClient walletClient = 2;
}
